<resources>
    <string name="app_name">Calculator</string>
    <string name="_12_5_9">12 + 5 + 9 =</string>
    <string name="ac">AC</string>
    <string name="plus">+</string>
    <string name="divided">÷</string>
    <string name="multiplication">×</string>
    <string name="minus">-</string>
    <string name="c">c</string>
    <string name="plus_minus">±</string>
    <string name="reminder">%</string>
    <string name="_2000">2000</string>
    <string name="_7">7</string>
    <string name="_9">9</string>
    <string name="_5">5</string>
    <string name="_8">8</string>
    <string name="_4">4</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_6">6</string>
    <string name="_3">3</string>
    <string name="dot">.</string>
    <string name="_0">0</string>
    <string name="equal">=</string>
</resources>