<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    android:padding="@dimen/PaddingLarge"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/result_tv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_gaint"
        android:gravity="end"
        android:maxLength="13"
        android:text="@string/_0"
        android:textColor="@color/white"
        android:textSize="@dimen/textGiant"
        android:textIsSelectable="true"
        android:textColorHighlight="#65FFAA00"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/plus_btn"
        style="@style/Buttons_Style.operations"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_marginTop="28dp"
        android:gravity="center"
        android:text="@string/plus"
        android:textSize="@dimen/buttton_text"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toStartOf="@+id/minus_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/result_tv" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/divided_btn"
        style="@style/Buttons_Style.operations"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:gravity="center"
        android:text="@string/divided"
        android:textSize="@dimen/buttton_text"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/multi_btn"
        app:layout_constraintTop_toTopOf="@+id/plus_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/reminder_btn"
        style="@style/Buttons_Style.right"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:gravity="center"
        android:text="@string/reminder"
        android:textSize="@dimen/buttton_text"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/no3_btn"
        app:layout_constraintTop_toTopOf="@+id/no1_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/equal_btn"
        style="@style/Buttons_Style.right"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:gravity="center"
        android:text="@string/equal"
        android:textSize="@dimen/buttton_text"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/dot_btn"
        app:layout_constraintTop_toTopOf="@+id/no0_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/no1_btn"
        style="@style/Buttons_Style.numbers"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/_1"
        android:textSize="@dimen/buttton_text"
        app:backgroundTint="@null"
        android:onClick="onClickNumber"
        app:layout_constraintEnd_toStartOf="@+id/no2_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/no4_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/no4_btn"
        style="@style/Buttons_Style.numbers"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:onClick="onClickNumber"
        android:text="@string/_4"
        android:textSize="@dimen/buttton_text"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toStartOf="@+id/no5_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/no7_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/multi_btn"
        style="@style/Buttons_Style.operations"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:gravity="center"
        android:text="@string/multiplication"
        android:textSize="@dimen/buttton_text"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toStartOf="@+id/divided_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/minus_btn"
        app:layout_constraintTop_toTopOf="@+id/plus_btn"
        tools:ignore="TextContrastCheck" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/no5_btn"
        style="@style/Buttons_Style.numbers"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:gravity="center"
        android:text="@string/_5"
        android:textSize="@dimen/buttton_text"
        android:onClick="onClickNumber"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toStartOf="@+id/no6_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/no4_btn"
        app:layout_constraintTop_toTopOf="@+id/no4_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/dot_btn"
        style="@style/Buttons_Style.numbers"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:gravity="center"
        android:text="@string/dot"
        android:textSize="@dimen/buttton_text"
        app:backgroundTint="@null"
        android:onClick="onClickNumber"
        app:layout_constraintEnd_toStartOf="@+id/equal_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/no0_btn"
        app:layout_constraintTop_toTopOf="@+id/no0_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/no8_btn"
        style="@style/Buttons_Style.numbers"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:gravity="center"
        android:text="@string/_8"
        android:onClick="onClickNumber"
        android:textSize="@dimen/buttton_text"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toStartOf="@+id/no9_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/no7_btn"
        app:layout_constraintTop_toTopOf="@+id/no7_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/no7_btn"
        style="@style/Buttons_Style.numbers"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:text="@string/_7"
        android:onClick="onClickNumber"
        android:textSize="@dimen/buttton_text"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toStartOf="@+id/no8_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/plus_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/c_btn"
        style="@style/Buttons_Style.right"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:gravity="center"
        android:text="@string/c"
        android:textSize="@dimen/buttton_text"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/no9_btn"
        app:layout_constraintTop_toTopOf="@+id/no7_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/no9_btn"
        style="@style/Buttons_Style.numbers"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:gravity="center"
        android:text="@string/_9"
        android:onClick="onClickNumber"
        android:textSize="@dimen/buttton_text"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toStartOf="@+id/c_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/no8_btn"
        app:layout_constraintTop_toTopOf="@+id/no7_btn" />

    <ImageButton
        android:id="@+id/backspce_btn"
        style="@style/Buttons_Style.right"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:gravity="center"
        android:textSize="@dimen/buttton_text"
        app:backgroundTint="@null"
        android:src="@drawable/baseline_arrow_back_space"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/no6_btn"
        app:layout_constraintTop_toTopOf="@+id/no4_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/no0_btn"
        style="@style/Buttons_Style.number0"
        android:layout_width="174dp"
        android:layout_height="@dimen/_60sdp"
        android:layout_marginTop="16dp"
        android:gravity="center"
        android:onClick="onClickNumber"
        android:text="@string/_0"
        android:textSize="@dimen/buttton_text"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toStartOf="@+id/dot_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/no1_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/no6_btn"
        style="@style/Buttons_Style.numbers"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:gravity="center"
        android:text="@string/_6"
        android:textSize="@dimen/buttton_text"
        app:backgroundTint="@null"
        android:onClick="onClickNumber"
        app:layout_constraintEnd_toStartOf="@+id/backspce_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/no5_btn"
        app:layout_constraintTop_toTopOf="@+id/no4_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/no3_btn"
        style="@style/Buttons_Style.numbers"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:gravity="center"
        android:text="@string/_3"
        android:onClick="onClickNumber"
        android:textSize="@dimen/buttton_text"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toStartOf="@+id/reminder_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/no2_btn"
        app:layout_constraintTop_toTopOf="@+id/no1_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/no2_btn"
        style="@style/Buttons_Style.numbers"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:gravity="center"
        android:text="@string/_2"
        android:textSize="@dimen/buttton_text"
        app:backgroundTint="@null"
        android:onClick="onClickNumber"
        app:layout_constraintEnd_toStartOf="@+id/no3_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/no1_btn"
        app:layout_constraintTop_toTopOf="@+id/no1_btn" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/minus_btn"
        style="@style/Buttons_Style.operations"
        android:layout_width="@dimen/_60sdp"
        android:layout_height="@dimen/_60sdp"
        android:gravity="center"
        android:text="@string/minus"
        android:textSize="@dimen/buttton_text"
        app:backgroundTint="@null"
        app:layout_constraintEnd_toStartOf="@+id/multi_btn"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/plus_btn"
        app:layout_constraintTop_toTopOf="@+id/plus_btn" />

</androidx.constraintlayout.widget.ConstraintLayout>